Fixed navbar issue with sticking too much top but now sticking possibly too little to top even though it looks fine.

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
-body {
-    margin: 0;
+.mainBody {
+    width: 90%;
+    margin: auto;
+    margin-top: -.4%;
 }
